# simple-tcp-server

./: .gitignore  Cargo.toml  LICENSE  README.md  config.json
db/: logins.db
src/: lib.rs  main.rs
src/database/: db.rs  mod.rs  sqlite.rs  textfile.rs
src/login/: encrypt.rs  login.rs
src/server/: response.rs
src/tools/: config.rs  filesystem.rs  mod.rs  utils.rs
