[package]
name = "simple_tcp_server"
version = "0.1.0"
edition = "2021"

[dependencies]
local-ip-address = "0.5.1"
sha2 = "0.10"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.21"
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
crate-type = ["lib"]